More cleanup -- adding Sources + About tabs

--- a/src/Web/ClientApp/components/nav-menu/nav-menu.html
+++ b/src/Web/ClientApp/components/nav-menu/nav-menu.html
@@ -18,13 +18,13 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
+                    <a [routerLink]="['/sources']">
+                        <span class='glyphicon glyphicon-education'></span> Sources
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/fetch-data']">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                    <a [routerLink]="['/about']">
+                        <span class='glyphicon glyphicon-th-list'></span> About
                     </a>
                 </li>
             </ul>
