--- a/src/Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/src/Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -1,5 +1,5 @@
 <div class='main-nav'>
-        <div class='navbar navbar-inverse'>
+    <div class='navbar navbar-inverse'>
         <div class='navbar-header'>
             <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
                 <span class='sr-only'>Toggle navigation</span>
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">Web</a>
+            <a class='navbar-brand' [routerLink]="['/home']">Salary Locator</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
