--- a/src/Web/Views/Home/Index.cshtml
+++ b/src/Web/Views/Home/Index.cshtml
@@ -5,6 +5,8 @@
 <app asp-prerender-module="ClientApp/dist/main-server">Loading...</app>
 
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
+<!-- Chart.js needs to be embedded this way. -->
+<script src="~/dist/Chart.min.js"></script>
 @section scripts {
     <script src="~/dist/main-client.js" asp-append-version="true"></script>
 }
