--- a/src/Web/Views/Home/Index.cshtml
+++ b/src/Web/Views/Home/Index.cshtml
@@ -2,11 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<app asp-prerender-module="ClientApp/dist/main-server">Loading...</app>
+<app>Loading...</app>
+@*<app asp-prerender-module="ClientApp/dist/main-server">Loading...</app>*@
 
-<script src="~/dist/vendor.js" asp-append-version="true"></script>
-<!-- Chart.js needs to be embedded this way. -->
+<!-- Chart.js needs to be embedded this way -- directly on the page. -->
 <script src="~/dist/Chart.min.js"></script>
+<script src="~/dist/vendor.js" asp-append-version="true"></script>
+
 @section scripts {
     <script src="~/dist/main-client.js" asp-append-version="true"></script>
 }
